# Organizations/csharp/src/Agile.Now.ApiOrganizations/Model/DepartmentInsertData.cs
@@ -3,7 +3,7 @@
  *
  * ## Introduction  The OpenAPI Specification (OAS) defines a standard, language-agnostic interface to RESTful APIs which allows both humans and computers to discover and understand the capabilities of the service without access to source code, documentation, or through network traffic inspection. When properly defined, a consumer can understand and interact with the remote service with a minimal amount of implementation logic.    An OpenAPI definition can then be used by documentation generation tools to display the API, code generation tools to generate servers and clients in various programming languages, testing tools, and many other use cases.    | Version | URL | Description |  | - -- | - -- | - -- |  | v3 | https://dev.esystems.fi/Endpoint/rest/Doc/v3/Json/Organizations | Serializes to the Open API document as a string in the JSON format and represents all patches of OpenAPI V3.0 spec (e.g. 3.0.0, 3.0.1). |  | v3 | https://dev.esystems.fi/Endpoint/rest/Doc/v3/Yaml/Organizations | Serializes to the Open API document as a string in the Yaml format and represents all patches of OpenAPI V3.0 spec (e.g. 3.0.0, 3.0.1). |  | v2 | https://dev.esystems.fi/Endpoint/rest/Doc/v2/Json/Organizations | Serializes to the Open API document as a string in the JSON format and represents OpenAPI V2.0 spec.|  | v2 | https://dev.esystems.fi/Endpoint/rest/Doc/v2/Yaml/Organizations | Serializes to the Open API document as a string in the Yaml format and represents OpenAPI V2.0 spec. |
  *
- * The version of the OpenAPI document: 2.0.100
+ * The version of the OpenAPI document: 2.0.104
  * Generated by: https://github.com/openapitools/openapi-generator.git
  */
 
@@ -61,18 +61,11 @@ namespace Agile.Now.ApiOrganizations.Model
         /// <param name="contactPhone">contactPhone.</param>
         /// <param name="ownerId">ownerId.</param>
         /// <param name="countryId">countryId.</param>
-        /// <param name="isActive">Defines if the department is active and can be used. (required) (default to false).</param>
-        public DepartmentInsertData(string id = default(string), string externalId = default(string), string name = default(string), EnumDepartmentType departmentTypeId = default(EnumDepartmentType), FieldType parentDepartmentId = default(FieldType), string contactName = default(string), string contactEmail = default(string), string contactPhone = default(string), FieldType ownerId = default(FieldType), EnumCountry? countryId = default(EnumCountry?), bool isActive = false)
+        public DepartmentInsertData(string id = default(string), string externalId = default(string), string name = default(string), EnumDepartmentType departmentTypeId = default(EnumDepartmentType), FieldType parentDepartmentId = default(FieldType), string contactName = default(string), string contactEmail = default(string), string contactPhone = default(string), FieldType ownerId = default(FieldType), EnumCountry? countryId = default(EnumCountry?))
         {
             this.Id = id;
-            // to ensure "name" is required (not null)
-            if (name == null)
-            {
-                throw new ArgumentNullException("name is a required property for DepartmentInsertData and cannot be null");
-            }
             this.Name = name;
             this.DepartmentTypeId = departmentTypeId;
-            this.IsActive = isActive;
             this.ExternalId = externalId;
             this.ParentDepartmentId = parentDepartmentId;
             this.ContactName = contactName;
@@ -100,7 +93,7 @@ namespace Agile.Now.ApiOrganizations.Model
         /// The name of the department.
         /// </summary>
         /// <value>The name of the department.</value>
-        [DataMember(Name = "Name", IsRequired = true, EmitDefaultValue = true)]
+        [DataMember(Name = "Name", EmitDefaultValue = true)]
         public string Name { get; set; }
 
         /// <summary>
@@ -135,13 +128,11 @@ namespace Agile.Now.ApiOrganizations.Model
         [DataMember(Name = "OwnerId", EmitDefaultValue = false)]
         public FieldType OwnerId { get; set; }
 
-        /// <summary>
-        /// Defines if the department is active and can be used.
-        /// </summary>
-        /// <value>Defines if the department is active and can be used.</value>
-        /// <example>false</example>
-        [DataMember(Name = "Is_Active", IsRequired = true, EmitDefaultValue = true)]
+        [DataMember(Name = "Is_Active", EmitDefaultValue = true)]
         public bool IsActive { get; set; }
+
+        [DataMember(Name = "Level", EmitDefaultValue = true)]
+        public int Level { get; set; }
 
         /// <summary>
         /// Returns the string presentation of the object
@@ -161,7 +152,6 @@ namespace Agile.Now.ApiOrganizations.Model
             sb.Append("  ContactPhone: ").Append(ContactPhone).Append("\n");
             sb.Append("  OwnerId: ").Append(OwnerId).Append("\n");
             sb.Append("  CountryId: ").Append(CountryId).Append("\n");
-            sb.Append("  IsActive: ").Append(IsActive).Append("\n");
             sb.Append("}\n");
             return sb.ToString();
         }
