# Organizations/csharp/src/Agile.Now.ApiOrganizations/Model/LocationInsertData.cs
@@ -3,7 +3,7 @@
  *
  * ## Introduction  The OpenAPI Specification (OAS) defines a standard, language-agnostic interface to RESTful APIs which allows both humans and computers to discover and understand the capabilities of the service without access to source code, documentation, or through network traffic inspection. When properly defined, a consumer can understand and interact with the remote service with a minimal amount of implementation logic.    An OpenAPI definition can then be used by documentation generation tools to display the API, code generation tools to generate servers and clients in various programming languages, testing tools, and many other use cases.    | Version | URL | Description |  | - -- | - -- | - -- |  | v3 | https://dev.esystems.fi/Endpoint/rest/Doc/v3/Json/Organizations | Serializes to the Open API document as a string in the JSON format and represents all patches of OpenAPI V3.0 spec (e.g. 3.0.0, 3.0.1). |  | v3 | https://dev.esystems.fi/Endpoint/rest/Doc/v3/Yaml/Organizations | Serializes to the Open API document as a string in the Yaml format and represents all patches of OpenAPI V3.0 spec (e.g. 3.0.0, 3.0.1). |  | v2 | https://dev.esystems.fi/Endpoint/rest/Doc/v2/Json/Organizations | Serializes to the Open API document as a string in the JSON format and represents OpenAPI V2.0 spec.|  | v2 | https://dev.esystems.fi/Endpoint/rest/Doc/v2/Yaml/Organizations | Serializes to the Open API document as a string in the Yaml format and represents OpenAPI V2.0 spec. |
  *
- * The version of the OpenAPI document: 2.0.100
+ * The version of the OpenAPI document: 2.0.104
  * Generated by: https://github.com/openapitools/openapi-generator.git
  */
 
@@ -63,9 +63,13 @@ namespace Agile.Now.ApiOrganizations.Model
         /// <param name="countryId">countryId.</param>
         /// <param name="timezoneId">timezoneId.</param>
         /// <param name="currencyId">currencyId.</param>
-        /// <param name="isActive">Defines if the location is active and can be used. (required) (default to false).</param>
-        public LocationInsertData(string id = default(string), string externalId = default(string), string name = default(string), EnumCountry? countryId = default(EnumCountry?), EnumTimezone? timezoneId = default(EnumTimezone?), EnumCurrency? currencyId = default(EnumCurrency?), bool isActive = false)
+        public LocationInsertData(string id = default(string), string externalId = default(string), string name = default(string), EnumCountry? countryId = default(EnumCountry?), EnumTimezone? timezoneId = default(EnumTimezone?), EnumCurrency? currencyId = default(EnumCurrency?))
         {
+            // to ensure "id" is required (not null)
+            if (id == null)
+            {
+                throw new ArgumentNullException("id is a required property for LocationInsertData and cannot be null");
+            }
             this.Id = id;
             // to ensure "name" is required (not null)
             if (name == null)
@@ -73,7 +77,6 @@ namespace Agile.Now.ApiOrganizations.Model
                 throw new ArgumentNullException("name is a required property for LocationInsertData and cannot be null");
             }
             this.Name = name;
-            this.IsActive = isActive;
             this.ExternalId = externalId;
             this.CountryId = countryId;
             this.TimezoneId = timezoneId;
@@ -84,7 +87,7 @@ namespace Agile.Now.ApiOrganizations.Model
         /// The guid to identify the location.
         /// </summary>
         /// <value>The guid to identify the location.</value>
-        [DataMember(Name = "Id", EmitDefaultValue = true)]
+        [DataMember(Name = "Id", IsRequired = true, EmitDefaultValue = true)]
         public string Id { get; set; }
 
         /// <summary>
@@ -102,14 +105,6 @@ namespace Agile.Now.ApiOrganizations.Model
         public string Name { get; set; }
 
         /// <summary>
-        /// Defines if the location is active and can be used.
-        /// </summary>
-        /// <value>Defines if the location is active and can be used.</value>
-        /// <example>false</example>
-        [DataMember(Name = "Is_Active", IsRequired = true, EmitDefaultValue = true)]
-        public bool IsActive { get; set; }
-
-        /// <summary>
         /// Returns the string presentation of the object
         /// </summary>
         /// <returns>String presentation of the object</returns>
@@ -123,7 +118,6 @@ namespace Agile.Now.ApiOrganizations.Model
             sb.Append("  CountryId: ").Append(CountryId).Append("\n");
             sb.Append("  TimezoneId: ").Append(TimezoneId).Append("\n");
             sb.Append("  CurrencyId: ").Append(CurrencyId).Append("\n");
-            sb.Append("  IsActive: ").Append(IsActive).Append("\n");
             sb.Append("}\n");
             return sb.ToString();
         }
